Fix debits index missing html_safe

--- a/app/views/debits/index.html.erb
+++ b/app/views/debits/index.html.erb
@@ -1,4 +1,4 @@
-<h1> <%= t('activerecord.models.debit').pluralize %></h1>
+<h1> <%= t('activerecord.models.debit').pluralize.html_safe %></h1>
 
 <table>
   <thead>
