Select2 for message route options

--- a/app/views/layouts/action_smser/delivery_reports.html.erb
+++ b/app/views/layouts/action_smser/delivery_reports.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang= "<%= I18n.locale %>">
 <head>
   <!--<meta content="10" http-equiv="refresh">-->
   <title>Sms - <%= t(:delivery_reports).titlecase%></title>
