--- a/app/views/bulk_messages/_form.html.erb
+++ b/app/views/bulk_messages/_form.html.erb
@@ -16,7 +16,7 @@
     <legend><%= t(:lists)%></legend>
     <%= select_tag :list_ids,
       options_from_collection_for_select(current_user.lists, "id", "name", @list_ids ),
-      {:multiple => true, :size => 5}
+      {:multiple => true, :class => "bulk_lists", "data-phtext" => I18n.t(:select_lists).html_safe}
     %>
   </fieldset>
 
