Select2 for Credits & Routes

--- a/app/assets/stylesheets/credits.css.scss
+++ b/app/assets/stylesheets/credits.css.scss
@@ -1,3 +1,7 @@
 // Place all the styles related to the credits controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.credit_user_select{
+    width: 180px;
+}
