--- a/app/assets/stylesheets/routes.css.scss
+++ b/app/assets/stylesheets/routes.css.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the routes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.route_gateway_select{
+    width: 120px;
+}
+
+.route_user_select{
+    width: 200px;
+}
