--- a/app/views/topups/_form.html.erb
+++ b/app/views/topups/_form.html.erb
@@ -15,14 +15,14 @@
     </div>
   <% end %>
 
-  <div class="field inline-field">
+  <div class="field inline-field number_field">
     <%= f.label :number, Topup.human_attribute_name("number").html_safe %><br>
     <%= f.text_field :number %>
   </div>
   <div class="field">
     <%= f.label :amount %><br>
     <%= f.select :amount,
-        (10..50).step(5).to_a
+        (10..50).step(5).to_a, {}, :class => "topup_amount_select"
   %>
   </div>
   <div class="actions">
