Adds api documentation

--- a/app/views/_footer_menu.html.erb
+++ b/app/views/_footer_menu.html.erb
@@ -1,6 +1,6 @@
 <div class="footer-menu">
   <%= link_to t('home'), '/' %>
   <%= link_to t('tos'), '/tos' %>
-  <%= link_to t('api'), '/api' %>
+  <%= link_to t('api'), '/api/doc' %>
   <%= link_to 'openBGS', 'http://openbgs.com' %>
 </div>
