Fix unscaped underscore chars

--- a/app/views/docs/api.html.erb
+++ b/app/views/docs/api.html.erb
@@ -364,7 +364,8 @@
 </ul></li>
 <li><p><strong>Sample Call:</strong></p>
 
-<p>curl http://sms.knal.es/api/bulk_messages -H 'content-type:application/json' -H 'email:me@gmail.com' -H 'api<em>key:51407ba8e75c7b1819a12137d4df4ecb' -X POST -d '{"bulk</em>message": {"route":"Prueba","message": "Testing bulk messages via api", "list_names": ["bar"]}}'</p></li>
+<p>curl http://sms.knal.es/api/bulk_messages -H
+'content-type:application/json' -H 'email:me@gmail.com' -H 'api_key:51407ba8e75c7b1819a12137d4df4ecb' -X POST -d '{"bulk_message": {"route":"Prueba","message": "Testing bulk messages via api", "list_names": ["bar"]}}'</p></li>
 <li><p><strong>Notes:</strong></p>
 
 <p>ListNames <strong>must</strong> be an array</p></li>
