Fix unscaped underscore chars

--- a/app/views/docs/api.html.erb
+++ b/app/views/docs/api.html.erb
@@ -174,7 +174,11 @@
 </ul></li>
 <li><p><strong>Sample Call:</strong></p>
 
-<p>curl http://sms.knal.es/api/single_messages -H 'content-type:application/json' -H 'email:me@gmail.com' -H 'api<em>key:51407ba8e75c7b1819a12137d4df4ecb' -X POST -v -d '{"single</em>message":{"numbers":["5352644047"], "route":"Prueba", "message":"Testing single meesage via api"}}'</p></li>
+<p>curl http://sms.knal.es/api/single_messages -H
+'content-type:application/json' -H 'email:me@gmail.com' -H
+'api_key:51407ba8e75c7b1819a12137d4df4ecb' -X POST -v -d
+'{"single_message":{"numbers":["5352644047"], "route":"Prueba",
+"message":"Testing single meesage via api"}}'</p></li>
 <li><p><strong>Notes:</strong></p>
 
 <p>Numbers <strong>must</strong> be an array</p></li>
