--- a/app/views/docs/api.html.erb
+++ b/app/views/docs/api.html.erb
@@ -182,7 +182,7 @@ DELETE -v -d '{"email":"me@gmail.com", "password":"secret"}'</p></li>
 'content-type:application/json' -H 'email:me@gmail.com' -H
 'api_key:51407ba8e75c7b1819a12137d4df4ecb' -X POST -v -d
 '{"single_message":{"numbers":["5352644047"], "route":"Prueba",
-"message":"Testing single meesage via api"}}'</p></li>
+"message":"Testing single message via api"}}'</p></li>
 <li><p><strong>Notes:</strong></p>
 
 <p>Numbers <strong>must</strong> be an array</p></li>
