--- a/app/views/messages/_message_options.html.erb
+++ b/app/views/messages/_message_options.html.erb
@@ -1,3 +1,8 @@
+<script>
+    $(function() {
+        $( "#datepicker" ).datepicker();
+    });
+</script>
 <fieldset>
   <legend><%= t(:sending_options).capitalize.html_safe%></legend>
   <div class="field">
@@ -15,7 +20,11 @@
     <%= check_box('schedule', 'schedule')%>
     </div>
     <%= f.label :schedule_sms, t("activerecord.models.schedule_sms") %>:
-    <%= select_datetime(Time.now) %>
+    <%= select_time(Time.now) %>
+    <%=text_field('datepik','datepik',:id=>"datepicker",:value=>Time.now)%>
   </div>
+
+
+
 </fieldset>
 
