--- a/app/views/routes/new.html.erb
+++ b/app/views/routes/new.html.erb
@@ -1,5 +1,5 @@
 <h1><%= t('new_route').html_safe %></h1>
 
-<%= render 'form' %>
+<%= render 'form' ,:new => true%>
 
 <%= link_to t('back').html_safe, routes_path %>
