check box in adduser only edit view

--- a/app/views/routes/_form.html.erb
+++ b/app/views/routes/_form.html.erb
@@ -56,7 +56,7 @@
 
   <fieldset>
 
-    <legend> <%= check_box_tag :add_user%><%= t('user_add') %></legend>
+    <legend><%if !new%> <%= check_box_tag :add_user%><%end%> <%= t('user_add') %></legend>
     <%= f.select :user_id,
       options_from_collection_for_select(User.all, "id", "email"),
       {},
