--- a/app/views/_footer_menu.html.erb
+++ b/app/views/_footer_menu.html.erb
@@ -2,4 +2,6 @@
   <%= link_to t('home'), '/' %>
   <%= link_to t('tos'), '/tos' %>
   <%= link_to t('api'), '/api/doc' %>
+  <%= link_to t('about'), '/about' %>
+  <%= link_to t('contact'), '/contact' %>
 </div>
