--- a/app/views/single_messages/_form.html.erb
+++ b/app/views/single_messages/_form.html.erb
@@ -12,6 +12,7 @@
     </div>
   <% end %>
 
+  <%= render '/messages/message_from', :f => f %>
   <div class="field">
     <%= f.label :number, SingleMessage.human_attribute_name("number")%><br>
     <%= f.text_field :number %>
