add internationalizattion to from_number

--- a/app/views/messages/_message_from.html.erb
+++ b/app/views/messages/_message_from.html.erb
@@ -1,4 +1,4 @@
 <div class="field">
-  <%= label :from, 'Origen'%><br>
-  <%= text_field(:from,:from)  %>
+  <%= label :from, t('from_number',:num=>5)%><br>
+  <%= text_field(:from,:from,:size=>10,:maxlenght=>5)  %>
 </div>
