--- a/app/views/action_smser/delivery_reports/summary.xls.erb
+++ b/app/views/action_smser/delivery_reports/summary.xls.erb
@@ -7,8 +7,14 @@ xmlns:html="http://www.w3.org/TR/REC-html">
         <Worksheet ss:Name="Sheet1">
                 <Table>
                         <Row>
-                          <Cell><Data ss:Type="String">To</Data></Cell>
-                          <Cell><Data ss:Type="String">Status</Data></Cell>
+                          <Cell><Data ss:Type="String"><%= t('id')%></Data></Cell>
+                          <Cell><Data ss:Type="String"><%= t('created_at')%></Data></Cell>
+                          <Cell><Data ss:Type="String"><%= t('msg_id')%></Data></Cell>
+                          <Cell><Data ss:Type="String"><%= t('route')%></Data></Cell>
+                          <Cell><Data ss:Type="String"><%= t('status')%></Data></Cell>
+                          <Cell><Data ss:Type="String"><%= t('status_updated_at')%></Data></Cell>
+                          <Cell><Data ss:Type="String"><%= t('recipient')%></Data></Cell>
+                          <Cell><Data ss:Type="String"><%= t('sms_type')%></Data></Cell>
                         </Row>
                          <%@delivery_report_xls.each do |dr|%>
                            <Row>
