--- a/app/views/action_smser/delivery_reports/summary.html.erb
+++ b/app/views/action_smser/delivery_reports/summary.html.erb
@@ -126,7 +126,7 @@
 </table>
 <br/>
 
-<%= link_to 'CSV', main_app.summary_delivery_reports_path(:format=>"csv",:time_span=>params['time_span'])%> |
-<%= link_to 'Excel', main_app.summary_delivery_reports_path(:format=>"xls",:time_span=>params['time_span'])%>
+<%= link_to('CSV', main_app.summary_delivery_reports_path(:format=>"csv",:time_span=>params['time_span']),:style=>'color:blue;')%> |
+<%= link_to('Excel', main_app.summary_delivery_reports_path(:format=>"xls",:time_span=>params['time_span']),:style => 'color:blue;')%>
 
 
