adds visual input for url callback in system

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -16,6 +16,9 @@
     <div><%= f.label :password_confirmation %><br />
       <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
 
+    <div><%= label_tag 'URL Callback' %><i><%= '(url actual: ' + current_user.url_callback + ')' if !current_user.url_callback.blank?%></i><br />
+      <%= text_field :url, :url %></div>
+
     <div><%= f.label :current_password %> <i>(<%= t('devise.registrations.edit.we_need_your_current_password_to_confirm_your_changes')%>)</i><br />
       <%= f.password_field :current_password, autocomplete: "off" %></div>
 
