--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -16,8 +16,14 @@
     <div><%= f.label :password_confirmation %><br />
       <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
 
+    <div><%= label_tag 'Número movil' %><i><%= t('movil_number') + current_user.movil_number + ')' if !current_user.movil_number.blank?%></i><br />
+      <%= text_field :movil_number, :movil_number %></div>
+
     <div><%= label_tag 'URL Callback' %><i><%= '(url actual: ' + current_user.url_callback + ')' if !current_user.url_callback.blank?%></i><br />
       <%= text_field :url, :url %></div>
+
+    <div><%= label_tag 'Confirme clave de su numero de telefono movil' %><i></i><br />
+      <%= text_field :confirmation, :confirmation %></div>
 
     <div><%= f.label :current_password %> <i>(<%= t('devise.registrations.edit.we_need_your_current_password_to_confirm_your_changes')%>)</i><br />
       <%= f.password_field :current_password, autocomplete: "off" %></div>
