--- a/app/views/messages/_message_options.html.erb
+++ b/app/views/messages/_message_options.html.erb
@@ -31,12 +31,14 @@
   </div>
 <%end%>
 
+  <%if obj.class==BulkMessage and !current_user.confirm_token_number.blank?%>
   <div class="field">
     <%if !current_user.movil_number.blank? %>
         <%= check_box(:notified,:notified)%>
         <%= f.label :backupSms, t('activerecord.models.notified_sms')%><br>
     <%else%>
         <p>Si desea recibir notificaciones incluya su numero de teléfono móvil en su informacion personal <%= link_to t('account'), main_app.edit_user_registration_path %></p>
+        </div>
     <%end%>
-  </div>
+  <%end%>
 </fieldset>
