add field api key and generate api_key

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -30,6 +30,10 @@
     <div><%= f.submit t('devise.registrations.edit.update') %></div>
 <% end %>
 
+<br/>
+<%= render 'get_api_key'%>
+
+
 <h3><%= t('devise.registrations.edit.cancel_my_account')%></h3>
 
 
