Patches confirmation message

--- a/app/views/confirmation_number/confirmation.html.erb
+++ b/app/views/confirmation_number/confirmation.html.erb
@@ -1,2 +1,2 @@
-<h1 style="color:green">Congratulation yo have confirm your phone</h1>
+<h1 style="color:green">Congrats! You have confirmed your phone number successfully</h1>
 
