--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -18,7 +18,7 @@
     <div><%= f.label :password_confirmation %><br />
       <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
 
-    <div><%= label_tag 'Número movil:' %><i> <%= current_user.movil_number if !current_user.movil_number.blank? %> <%= t('not_confirm_number') if current_user.confirm_token_number.blank? and  !current_user.movil_number.blank?%></i>
+    <div><%= label_tag 'Número movil:' %><i> <%= current_user.movil_number if !current_user.movil_number.blank? %> <%= t('not_confirm_number') if current_user.confirm_token_number.blank? and  !current_user.movil_number.blank?%></i>  <%= link_to 'Confirmar',controller: "confirmation_number",action: "confirmation",method: :get if current_user.confirm_token_number.blank?  and  !current_user.movil_number.blank?%>
 
       <br />
       <%= text_field :movil_number, :movil_number %></div>
@@ -42,5 +42,5 @@
 <p><%= t('devise.registrations.edit.unhappy')%>? <%= button_to t('devise.registrations.edit.cancel_my_account'), registration_path(resource_name), data: { confirm: I18n.translate('devise.registrations.edit.are_you_sure') }, method: :delete %>
 </p>
 
-<%= link_to 'Confirmar',controller: "confirmation_number",action: "confirmation",method: :get %> |
+
 <%= link_to t('devise.shared.links.back'), :back %>
