--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -18,10 +18,10 @@
     <div><%= f.label :password_confirmation %><br />
       <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
 
-    <div><%= label_tag 'Número movil:' %><i> <%= current_user.movil_number if !current_user.movil_number.blank? %> <%= t('not_confirm_number') if current_user.confirm_token_number.blank? and  !current_user.movil_number.blank?%></i>  <%= link_to 'Confirmar',controller: "confirmation_number",action: "confirmation",method: :get if current_user.confirm_token_number.blank?  and  !current_user.movil_number.blank?%>
+    <div><%= label_tag 'Número movil:' %><i> <%= current_user.movil_number if !current_user.movil_number.blank? %> <%= t('not_confirm_number') if current_user.confirm_token_number.blank? and  !current_user.movil_number.blank?%></i>
 
       <br />
-      <%= text_field :movil_number, :movil_number %></div>
+      <%= text_field :movil_number, :movil_number %> <%='clave' if !current_user.token_number.blank? and current_user.confirm_token_number.blank? %> <%= text_field :confirm_number, :confirm_number,:style=>'width:41px;' if !current_user.token_number.blank? and current_user.confirm_token_number.blank?%> </div>
 
     <div><%= label_tag 'URL Callback' %><i><%= '(url actual: ' + current_user.url_callback + ')' if !current_user.url_callback.blank?%></i><br />
       <%= text_field :url, :url %></div>
@@ -34,6 +34,9 @@
 
 <br/>
 <%= render 'get_api_key'%>
+<br/>
+<br/>
+<%= render 'reconfirmed'%>
 
 
 <h3><%= t('devise.registrations.edit.cancel_my_account')%></h3>
