added locales in 181

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -26,8 +26,8 @@
     <div><%= label_tag 'URL Callback' %><i><%= '(url actual: ' + current_user.url_callback + ')' if !current_user.url_callback.blank?%></i><br />
       <%= text_field :url, :url %></div>
 
-    <div><%= check_box :low_a_check,:low_a_check%> <%= label_tag 'Low account balance warning' %> <%= "(actual" + current_user.low_account.to_f.to_s + ")"  if !current_user.low_account.nil? %></i><br />
-      <%= text_field :low_account, :low_account , :style=>'width:46px;'%></div>
+    <div><%= check_box :low_a_check,:low_a_check%> <%= label_tag t('low_account') %> <%=  t('low_account_current',:credit => current_user.low_account.to_f.to_s)  if !current_user.low_account.nil? %></i><br />
+      <%= text_field :low_account, :low_account , :style=>'width:64px;',:placeholder=> t('number').html_safe%> <%= render 'warning_balance'%></div>
 
     <div><%= f.label :current_password %> <i>(<%= t('devise.registrations.edit.we_need_your_current_password_to_confirm_your_changes')%>)</i><br />
       <%= f.password_field :current_password, autocomplete: "off" %></div>
